--- a/cr_react_app/package.json
+++ b/cr_react_app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "frontend",
+  "name": "cr_stand_alone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
@@ -12,10 +12,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-pageflip": "^2.0.3",
     "react-quill": "^2.0.0",
     "react-quill-image-uploader": "^0.1.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.5",
+    "react-select": "^5.7.7",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
