--- a/cr_desktop/package.json
+++ b/cr_desktop/package.json
@@ -2,15 +2,17 @@
   "name": "cr_desktop",
   "version": "1.0.0",
   "description": "Change Record Desktop Application",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start":"set ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "start": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "package": "electron-builder build --win ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Varun Seshadrinathan",
   "license": "ISC",
   "devDependencies": {
     "electron": "^27.0.2",
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "electron-is-dev": "^2.0.0"
   }
 }
