--- a/cr_react_app/package.json
+++ b/cr_react_app/package.json
@@ -22,9 +22,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -r build/ ../cr_desktop/",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "build-desktop":"webpack --mode production --config webpack.config.js --output-path ../cr_desktop/static/"
   },
   "eslintConfig": {
     "extends": [
