--- a/cr_desktop/package.json
+++ b/cr_desktop/package.json
@@ -2,11 +2,10 @@
   "name": "cr_desktop",
   "version": "1.0.0",
   "description": "Change Record Desktop Application",
-  "main": "electron.js",
+  "main": "main.js",
   "scripts": {
     "start": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
     "package": "electron-builder --win ",
-    "electron-pack": "electron-builder -c.extraMetadata.main=electron.js --win",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "build":
@@ -19,7 +18,7 @@
     "files": [
       "build/**/*",
       "node_modules/**/*",
-      "electron.js"
+      "main.js"
     ],
     "mac": {
       "target": "dmg"
