--- a/cr_react_app/package.json
+++ b/cr_react_app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
     "quill": "^1.3.7",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
@@ -22,10 +23,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp -r build/ ../cr_desktop/",
+    "build": "react-scripts build && robocopy build/ ../cr_desktop/build/ /S /DCOPY:DAT /R:10 /W:3",
     "test": "react-scripts test",
-    "eject": "react-scripts eject", 
-    "build-desktop":"webpack --mode production --config webpack.config.js --output-path ../cr_desktop/static/"
+    "eject": "react-scripts eject",
+    "build-desktop": "webpack --mode production --config webpack.config.js --output-path ../cr_desktop/static/"
   },
   "eslintConfig": {
     "extends": [
