--- a/cr_react_app/package.json
+++ b/cr_react_app/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
     "quill": "^1.3.7",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-pageflip": "^2.0.3",
