--- a/cr_react_app/package.json
+++ b/cr_react_app/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
+    "googleapis": "^130.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "quill": "^1.3.7",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
@@ -20,12 +22,12 @@
     "react-quill-image-uploader": "^0.1.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
-    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && robocopy build/ ../cr_desktop/build/ /S /DCOPY:DAT /R:10 /W:3",
+    "start": "cd server && nodemon server.js ",
+    "dev": "webpack --mode development --watch --config webpack.config.js --output-path server/dist/",
+    "build": "webpack . && robocopy build/ ../cr_desktop/build/ /S /DCOPY:DAT /R:10 /W:3",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-desktop": "webpack --mode production --config webpack.config.js --output-path ../cr_desktop/static/"
@@ -47,5 +49,39 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/runtime": "^7.23.7",
+    "assert": "^2.1.0",
+    "babel-loader": "^9.1.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.6.1",
+    "fs": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
+    "nodemon": "^3.0.2",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "querystring-es3": "^0.2.1",
+    "react-google-login": "^5.2.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "browser": {
+    "fs": false
   }
 }
