--- a/cr_react_app/package.json
+++ b/cr_react_app/package.json
@@ -17,8 +17,6 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
-    "react-pageflip": "^2.0.3",
-    "react-quill": "^2.0.0",
     "react-quill-image-uploader": "^0.1.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
@@ -73,7 +71,11 @@
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "querystring-es3": "^0.2.1",
+    "quill-table": "^1.0.0",
+    "react-datepicker": "^4.25.0",
     "react-google-login": "^5.2.2",
+    "react-quill": "^2.0.0",
+    "react-quill-with-table": "^1.3.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
